/**
 * Copyright (c) 2020-present, Wuba, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bj58.ailab.dlpredictonline.grpc";
option java_outer_classname = "WpaiDLPredictOnline";

package com.bj58.ailab.dlpredictonline.grpc;

service WpaiDLPredictOnlineService {
    rpc Predict(PredictRequest) returns (PredictResponse) {};
    rpc PytorchPredict(PytorchPredictRequest) returns (PytorchPredictResponse) {};
    rpc CaffePredict(CaffePredictRequest) returns (CaffePredictResponse) {};
    rpc TisPredict(TisPredictRequest) returns (TisPredictResponse) {};
}

message PytorchPredictRequest{
    string inputs = 1;
}

message PytorchPredictResponse{
    string outputs = 1;
}

message PredictRequest{
    string inputs = 1;
}

message PredictResponse{
    string outputs = 1;
}

message CaffePredictRequest{
    string inputs = 1;
}

message CaffePredictResponse{
    string outputs = 1;
}

message TisPredictRequest{
    string inputs = 1;
}

message TisPredictResponse{
    string outputs = 1;
}